# vsock-grpc-file-transfer

./: Cargo.toml  README.md  local.json
proto/: service.proto
src/: client.rs  server.rs
testdata/: test_file_1
